--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="Assets/style/style.css" />
+    <link rel="stylesheet" href="assets/style/style.css" />
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>Login</title>
 </head>
@@ -14,14 +14,14 @@
     <div class="container">
         <main>
             <p>Login</p>
-            <img src="Assets/image/glasses-png 1.svg" alt="" class = "glasses">
+            <img src="assets/image/glasses-png 1.svg" alt="" class = "glasses">
             <div class="bgImgDiv">
-                <img src="Assets/image/Vector-1.svg" alt="" class = 'bgImg'>
+                <img src="assets/image/Vector-1.svg" alt="" class = 'bgImg'>
             </div>
-            <img src="Assets/image/Variant2.svg" alt="" id = "anchor" />
+            <img src="assets/image/Variant2.svg" alt="" id = "anchor" />
             <div id="eyes">
-                <img src="Assets/image/eye box.svg" alt="eye" class = "eye one">
-                <img src="Assets/image/eye box.svg" alt="eye" class = "eye two">
+                <img src="assets/image/eye box.svg" alt="eye" class = "eye one">
+                <img src="assets/image/eye box.svg" alt="eye" class = "eye two">
               </div>
             <form action="">
                 <p>Email</p>
@@ -39,6 +39,6 @@
             </form>
         </main>
     </div>
-    <script src="Assets/script/script.js"></script>
+    <script src="assets/script/script.js"></script>
 </body>
 </html>
